--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@sanity/image-url": "^1.0.2",
-    "@sanity/vision": "^3.33.0",
     "next": "14.1.3",
-    "next-sanity": "^7.1.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "styled-components": "^6.1.8",
+    "next-sanity": "^7.1.4",
     "sanity": "^3.33.0",
-    "styled-components": "^6.1.8"
+    "@sanity/image-url": "^1.0.2",
+    "@sanity/vision": "^3.33.0"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -28,6 +28,7 @@
     "eslint-config-next": "14.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@sanity/eslint-config-studio": "^3.0.1"
   }
 }
